# python-git-pusher

./: .gitignore  README.md  _config.yml  config.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: 1-bug-report.md
git_pusher/: __init__.py
