[tool.poetry]
name = "python-git-pusher"
version = "0.1.0"
description = "Push files in multiple git repos in one go"
authors = ["John Stilia <stilia.johny@gmail.com>"]
license = "GPL-3"

[tool.poetry.dependencies]
python = "^3.10"
validator = "^0.7.1"
figlet = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
script = "git_pusher:main"